chore: Add search input

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<adam-input label="Password" type="password"></adam-input>
 		<adam-input label="Tel" type="tel"></adam-input>
 		<adam-input label="URL" type="url"></adam-input>
+		<adam-input label="Search" type="search"></adam-input>
 	</main>
 </body>
 </html>
