Add bigger helper text to test

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<adam-input label="Default">
 			<div slot="helper-text">
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga libero, modi, perferendis amet, debitis iste earum voluptatem.</p>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga libero, modi, perferendis amet, debitis iste earum voluptatem.</p>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga libero, modi, perferendis amet, debitis iste earum voluptatem.</p>
 			</div>
 		</adam-input>
 		<adam-input label="Required" required></adam-input>
