chore: remove test code

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Adam Elements</title>
 	<link rel="stylesheet" href="./css/style.css">
-	<script src="./components/test.ts" type="module"></script>
 </head>
 <body>
 	<main>
-		<test-element></test-element>
-		<!-- <adam-input label="Default">
+		<adam-input label="Default">
 			<div slot="helper-text">
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga libero, modi, perferendis amet, debitis iste earum voluptatem.</p>
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga libero, modi, perferendis amet, debitis iste earum voluptatem.</p>
@@ -68,7 +66,7 @@
 		</adam-select>
 		<adam-select label="Select Placeholder" placeholder="FOO">
 			<option>Test</option>
-		</adam-select> -->
+		</adam-select>
 	</main>
 </body>
 </html>
