--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Adam Elements</title>
 	<link rel="stylesheet" href="./css/style.css">
+	<script type="module" src="./js/main.ts"></script>
 </head>
 <body>
 	<main>
